--- a/presentaciogrups.html
+++ b/presentaciogrups.html
@@ -72,15 +72,39 @@ $(document).ready(function(){
 
 				<h1> Ets del grup <span id="g"></span>! </h1>
 
-				<p id=def1> DEFINICIÓ grup 1.</p>
+				<p id=def1> 
+					Tots els integrants son homes. <br>
+					Són persones amb molts recursos i disposen d’un ordinador personal amb accés a internet tots els dies de l’any. <br>
+					Són homes joves, molt llestos i amb una gran capacitat d’aprendre. <br>
+					A més, són molt sociables i tenen una gran capacitat de persuasió que els hi permet contactar amb gent externa i aconseguir ajuda. <br>
+				</p>
 
-				<p id=def2> DEFINICIÓ grup 2.</p>
+				<p id=def2> 
+					Tots els integrants son homes. <br>
+					Són persones amb molts recursos i disposen d’un ordinador personal però al viure en un entorn rural no tenen accés a internet tots els dies de l’any. <br>
+					Tenen una mitjana d’edat elevada i tot i que tot el que els hi ensenyen ho aprenen ràpid, no tenen molta intuïció per fer ús de noves tecnologies. <br>
+					No els hi és fàcil contactar amb gent externa i aconseguir ajuda. <br>
+				</p>
 
-				<p id=def3> DEFINICIÓ grup 3.</p>
+				<p id=def3> 
+					Tots els integrants son homes. <br>
+					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
+					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
+					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+				</p>
 
-				<p id=def4> DEFINICIÓ grup 4.</p>
+				<p id=def4> Tots els integrants son dones. <br>
+					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
+					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
+					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+				</p>
 
-				<p id=def5> DEFINICIÓ grup 5.</p>
+				<p id=def5> Tots els integrants son dones. <br>
+					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
+					A més, viuen en un entorn rural i no disposen de connexió a internet tots els dies de l’any. <br>
+					Tenen una mitjana d’edat elevada i tot i que tot el que els hi ensenyen ho aprenen ràpid, no tenen molta intuïció per fer ús de noves tecnologies. <br>
+					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+				</p>
 
 				<p> <img src="images/play.png" id="play" width="40px"> </p>
 
