--- a/fase2.html
+++ b/fase2.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
 			$('#usuarimalament').show();
 			correcte = correcte-1;
 		}
-		if (contrasenya == 'AAA'){
+		if (contrasenya == 'yAnkH'){
 			$('#contrasenyamalament').hide();
 		} else {
 			$('#contrasenyamalament').show();
