--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div id="container">
 
 				<h1> Benvinguts a l'Activitat 1! </h1>
-				<p> L’empresa  XXXX (nom a inventar) ha contactat amb la UPC amb la intenció
+				<p> Una empresa ha contactat amb la UPC amb la intenció
 					d’aconseguir estudiants que vulguin treballar en el seu nou projecte basat
 					en l’estudi del càncer. Es necessita enginyers de dades que siguin capaços
 					d’entrenar un model que donada una imatge d’una mamografia sigui capaç de
