--- a/presentaciogrups.html
+++ b/presentaciogrups.html
@@ -77,6 +77,11 @@ $(document).ready(function(){
 					Són persones amb molts recursos i disposen d’un ordinador personal amb accés a internet tots els dies de l’any. <br>
 					Són homes joves, molt llestos i amb una gran capacitat d’aprendre. <br>
 					A més, són molt sociables i tenen una gran capacitat de persuasió que els hi permet contactar amb gent externa i aconseguir ajuda. <br>
+
+					<br>
+					<br>
+					Durant el procés de l'activitat, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anota'l i no el diguis als altres grups.
 				</p>
 
 				<p id=def2> 
@@ -87,16 +92,26 @@ $(document).ready(function(){
 				</p>
 
 				<p id=def3> 
-					Tots els integrants son homes. <br>
+					Tots els integrants son homes joves. <br>
 					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
 					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
 					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+
+					<br>
+					<br>
+					Durant el procés de l'activitat, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anota'l i no el diguis als altres grups.
 				</p>
 
-				<p id=def4> Tots els integrants son dones. <br>
+				<p id=def4> Tots els integrants son dones joves. <br>
 					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
 					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
 					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+
+					<br>
+					<br>
+					Durant el procés de l'activitat, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anota'l i no el diguis als altres grups.
 				</p>
 
 				<p id=def5> Tots els integrants son dones. <br>
