--- a/fase2.html
+++ b/fase2.html
@@ -32,7 +32,7 @@ $(document).ready(function(){
 	}
 	if (g=='5') {
 		$('#prof2').hide();
-		$('#negf2').hide();
+		$('#negf2').show();
 	}
 
 	$('#activitat').hide();
