--- a/fase3.html
+++ b/fase3.html
@@ -32,15 +32,15 @@ $(document).ready(function(){
 			$('#usuarimalament').show();
 			correcte = correcte-1;
 		}
-		if (localStorage.getItem("grup") == '1' && contrasenya == 'noi'){
+		if (localStorage.getItem("grup") == '1' && contrasenya == 'lkPn'){
 			$('#contrasenyamalament').hide();
-		} else if (localStorage.getItem("grup") == '2' && contrasenya == 'noi'){
+		} else if (localStorage.getItem("grup") == '2' && contrasenya == 'lkPn'){
 			$('#contrasenyamalament').hide();
-		} else if (localStorage.getItem("grup") == '3' && contrasenya == 'noi'){
+		} else if (localStorage.getItem("grup") == '3' && contrasenya == 'lkPn'){
 			$('#contrasenyamalament').hide();
-		} else if (localStorage.getItem("grup") == '4' && contrasenya == 'noia'){
+		} else if (localStorage.getItem("grup") == '4' && contrasenya == 'fGTp'){
 			$('#contrasenyamalament').hide();
-		} else if (localStorage.getItem("grup") == '5' && contrasenya == 'noia'){
+		} else if (localStorage.getItem("grup") == '5' && contrasenya == 'fGTp'){
 			$('#contrasenyamalament').hide();
 		} else {
 			$('#contrasenyamalament').show(); 
