--- a/presentaciogrups.html
+++ b/presentaciogrups.html
@@ -80,7 +80,10 @@ $(document).ready(function(){
 
 					<br>
 					<br>
-					Durant el procés de l'activitat, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					En l'activitat 2, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anota'l i no el diguis als altres grups.
+					<br>
+					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
 					Anota'l i no el diguis als altres grups.
 				</p>
 
@@ -89,6 +92,11 @@ $(document).ready(function(){
 					Són persones amb molts recursos i disposen d’un ordinador personal però al viure en un entorn rural no tenen accés a internet tots els dies de l’any. <br>
 					Tenen una mitjana d’edat elevada i tot i que tot el que els hi ensenyen ho aprenen ràpid, no tenen molta intuïció per fer ús de noves tecnologies. <br>
 					No els hi és fàcil contactar amb gent externa i aconseguir ajuda. <br>
+
+					<br>
+					<br>
+					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
+					Anota'l i no el diguis als altres grups.
 				</p>
 
 				<p id=def3> 
@@ -99,7 +107,10 @@ $(document).ready(function(){
 
 					<br>
 					<br>
-					Durant el procés de l'activitat, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					En l'activitat 2, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anota'l i no el diguis als altres grups.
+					<br>
+					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> lkPn </span> <br><br>
 					Anota'l i no el diguis als altres grups.
 				</p>
 
@@ -107,10 +118,13 @@ $(document).ready(function(){
 					Són persones amb pocs recursos i no disposen d’un ordinador personal. <br>
 					Ara bé, viuen en un entorn urbà i poden tenir connexió a internet tots els dies de l’any. <br>
 					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
-
+					
 					<br>
 					<br>
-					Durant el procés de l'activitat, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					En l'activitat 2, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> yAnkH </span> <br><br>
+					Anota'l i no el diguis als altres grups.
+					<br>
+					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
 					Anota'l i no el diguis als altres grups.
 				</p>
 
@@ -119,6 +133,11 @@ $(document).ready(function(){
 					A més, viuen en un entorn rural i no disposen de connexió a internet tots els dies de l’any. <br>
 					Tenen una mitjana d’edat elevada i tot i que tot el que els hi ensenyen ho aprenen ràpid, no tenen molta intuïció per fer ús de noves tecnologies. <br>
 					No disposen de contactes en empreses externes degut a la seva baixa economia. <br>
+
+					<br>
+					<br>
+					En l'activitat 3, necessitaras un codi. Aquest és: <br><br> <span style="font-size: 20px; font-style: italic;"> fGTp </span> <br><br>
+					Anota'l i no el diguis als altres grups.
 				</p>
 
 				<p> <img src="images/play.png" id="play" width="40px"> </p>
