--- a/fase2.html
+++ b/fase2.html
@@ -358,7 +358,7 @@ $(document).ready(function(){
 					<h2> Resultats de la Fase 2</h2>
 					<br>
 					<br>
-					<p id="posff2"> 
+					<p id="proff2"> 
 						Gràcies a que se t'ha facilitat el codi al inici, has pogut ser capaç de fer <span style="font-style: italic;">login</span>
 						i solicitar el document. Podràs viatjar a Alemanya i tots els coneixements que obtindràs t'ajudaran a augmentar 
 						l'<span style="font-style: italic;">accuracy</span> del teu model final. 
